fixed sticky navbar overlapping logo on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,6 +181,7 @@ body {
   }
   #technica-logo {
     padding-top: 10%;
+    margin-top: 10%;
     width: 600px;
   }
   #hero-tagline {
